// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lib/ui/menuItems/pinMenuItem > should render for actions if pinned=false 1`] = `
<div
  className="fui-MenuItem rfoezjv"
  data-automation-id="msla-pin-menu-option"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseMove={[Function]}
  role="menuitem"
  tabIndex={0}
>
  <span
    className="fui-MenuItem__icon ro9koqv"
  >
    <span
      data-testid="fluent-icon"
    />
  </span>
  <span
    className="fui-MenuItem__content r1ls86vo"
  >
    Pin action
  </span>
</div>
`;

exports[`lib/ui/menuItems/pinMenuItem > should render for actions if pinned=true 1`] = `
<div
  className="fui-MenuItem rfoezjv"
  data-automation-id="msla-pin-menu-option"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseMove={[Function]}
  role="menuitem"
  tabIndex={0}
>
  <span
    className="fui-MenuItem__icon ro9koqv"
  >
    <span
      data-testid="fluent-icon"
    />
  </span>
  <span
    className="fui-MenuItem__content r1ls86vo"
  >
    Unpin action
  </span>
</div>
`;
